--- a/ConAuction3/Views/CustomerDlg.xaml
+++ b/ConAuction3/Views/CustomerDlg.xaml
@@ -13,18 +13,22 @@
 			<RowDefinition Height="30" />
 			<RowDefinition Height="30" />
             <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<Label Grid.Row="0" Content="Id" />
 		<Label Grid.Row="1" Name="Id" MinWidth="250" />
 		<Label Grid.Row="2" Content="Namn" />
 		<TextBox Grid.Row="3" Name="CustomerName"  MinWidth="250" />
-		<Label Grid.Row="4" Content="Mobilnummer" />
-		<TextBox Grid.Row="5" Name="Phone" MinWidth="250" />
-        <CheckBox Grid.Row="6" Name="Swish" MinWidth="250" HorizontalAlignment="Left" VerticalAlignment="Center" >Swish</CheckBox>
-        <Label Grid.Row="7" Content="Not" />
-        <TextBox Grid.Row="8" Name="Note" MinWidth="250" />
-		<WrapPanel Grid.Row="9" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
+        <Label Grid.Row="4" Content="Kortnamn för köp" />
+        <TextBox Grid.Row="5" Name="ShortName"  MinWidth="250" />
+		<Label Grid.Row="6" Content="Mobilnummer" />
+		<TextBox Grid.Row="7" Name="Phone" MinWidth="250" />
+        <CheckBox Grid.Row="8" Name="Swish" MinWidth="250" HorizontalAlignment="Left" VerticalAlignment="Center" >Swish</CheckBox>
+        <Label Grid.Row="9" Content="Not" />
+        <TextBox Grid.Row="10" Name="Note" MinWidth="250" />
+		<WrapPanel Grid.Row="11" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
 			<Button IsDefault="True" Name="btnDialogOk" Click="OnClick" MinWidth="60" Margin="0,0,10,0">_Ok</Button>
 			<Button IsCancel="True" MinWidth="60">_Cancel</Button>
 		</WrapPanel>
