--- a/ConAuction3/Views/PromptDialog.xaml
+++ b/ConAuction3/Views/PromptDialog.xaml
@@ -25,8 +25,8 @@
         <TextBox Name="txtResponse" Margin="5"/>
         <PasswordBox Name="txtPasswordResponse" Margin="5"/>
         <StackPanel Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
-            <Button Content="_Ok" IsDefault="True" Margin="5" Name="btnOk" Click="ButtonOk_Click" />
-            <Button Content="_Cancel" IsCancel="True" Margin="5" Name="btnCancel" Click="ButtonCancel_Click" />
+            <Button Content="_Ok" IsDefault="True" Margin="5" Name="btnOk" Click="ButtonOk_Click" MinWidth="50" />
+            <Button Content="_Cancel" IsCancel="True" Margin="5" Name="btnCancel" Click="ButtonCancel_Click" MinWidth="50" />
         </StackPanel>
     </StackPanel>
 </Window>
